<resources>
    <string name="app_name">Segunda Prova</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buttonCadastrar">Cadastrar</string>
    <string name="formName">Name</string>
    <string name="sobre">Sobre</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="descricao">Descricao</string>
    <string name="ano">Ano</string>
    <string name="nota">Nota</string>
    <string name="cadastra">Cadastrar</string>
    <string name="desenvolvedor">Eric Felipe</string>
    <string name="github">github.com/ericosta-dev</string>
    <string name="temaprova">Praias</string>

</resources>